# eget-py

./: .gitignore  README.md  build_wheel.py  pdm_build.py  pyproject.toml
.github/workflows/: build.yml
eget/: __main__.py
